--- a/.gitmodules
+++ b/.gitmodules
@@ -1,69 +1,92 @@
 [submodule "vim/vim.symlink/vim-pathogen"]
 	path = vim/vim.symlink/vim-pathogen
 	url = git://github.com/tpope/vim-pathogen.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/vim-colors-solarized"]
 	path = vim/vim.symlink/bundle/vim-colors-solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/vim-javascript"]
 	path = vim/vim.symlink/bundle/vim-javascript
 	url = git://github.com/pangloss/vim-javascript.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/vim-rails"]
 	path = vim/vim.symlink/bundle/vim-rails
 	url = git://github.com/tpope/vim-rails.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/vim-haml"]
 	path = vim/vim.symlink/bundle/vim-haml
 	url = git://github.com/tpope/vim-haml.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/ack.vim"]
 	path = vim/vim.symlink/bundle/ack.vim
 	url = git://github.com/mileszs/ack.vim.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/proj-vim"]
 	path = vim/vim.symlink/bundle/proj-vim
 	url = git://github.com/tmallen/proj-vim.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/nerdtree"]
 	path = vim/vim.symlink/bundle/nerdtree
 	url = git://github.com/scrooloose/nerdtree.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/vim-markdown"]
 	path = vim/vim.symlink/bundle/vim-markdown
 	url = git://github.com/plasticboy/vim-markdown.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/vim-fugitive"]
 	path = vim/vim.symlink/bundle/vim-fugitive
 	url = git://github.com/tpope/vim-fugitive.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/vim-phpunit/plugin"]
 	path = vim/vim.symlink/bundle/vim-phpunit/plugin
 	url = git://github.com/klokane/vim-phpunit.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/vim-coffee-script"]
 	path = vim/vim.symlink/bundle/vim-coffee-script
 	url = git://github.com/kchmck/vim-coffee-script.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/xml.vim"]
 	path = vim/vim.symlink/bundle/xml.vim
 	url = git://github.com/othree/xml.vim.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/vim-snipmate"]
 	path = vim/vim.symlink/bundle/vim-snipmate
 	url = git://github.com/garbas/vim-snipmate.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/vim-addon-mw-utils"]
 	path = vim/vim.symlink/bundle/vim-addon-mw-utils
 	url = git://github.com/MarcWeber/vim-addon-mw-utils.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/tlib_vim"]
 	path = vim/vim.symlink/bundle/tlib_vim
 	url = git://github.com/tomtom/tlib_vim.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/snipmate-snippets"]
 	path = vim/vim.symlink/bundle/snipmate-snippets
 	url = git://github.com/honza/snipmate-snippets.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/supertab"]
 	path = vim/vim.symlink/bundle/supertab
 	url = git://github.com/ervandew/supertab.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/tagbar"]
 	path = vim/vim.symlink/bundle/tagbar
 	url = git://github.com/majutsushi/tagbar.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/vim-indent-guides"]
 	path = vim/vim.symlink/bundle/vim-indent-guides
 	url = git://github.com/nathanaelkane/vim-indent-guides.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/mustache.vim"]
 	path = vim/vim.symlink/bundle/mustache.vim
 	url = git://github.com/juvenn/mustache.vim.git
+    ignore = untracked
 [submodule "vim/vim.symlink/bundle/fuzzyfinder_textmate"]
 	path = vim/vim.symlink/bundle/fuzzyfinder_textmate
 	url = git://github.com/sethbc/fuzzyfinder_textmate.git
+    ignore = untracked
 [submodule "zsh-completions/all"]
 	path = zsh-completions/all
 	url = git://github.com/zsh-users/zsh-completions.git
+    ignore = untracked
