--- a/.gitmodules
+++ b/.gitmodules
@@ -120,3 +120,6 @@
 [submodule "sublime3/Packages/MarkdownEditing"]
 	path = sublime3/Packages/MarkdownEditing
 	url = git://github.com/ttscoff/MarkdownEditing.git
+[submodule "sublime3/Packages/RubyTest"]
+	path = sublime3/Packages/RubyTest
+	url = git://github.com/maltize/sublime-text-2-ruby-tests.git
