--- a/.gitmodules
+++ b/.gitmodules
@@ -123,3 +123,6 @@
 [submodule "sublime3/Packages/RubyTest"]
 	path = sublime3/Packages/RubyTest
 	url = git://github.com/maltize/sublime-text-2-ruby-tests.git
+[submodule "sublime3/Packages/Dictionaries"]
+	path = sublime3/Packages/Dictionaries
+	url = git://github.com/SublimeText/Dictionaries.git
